[metadata]
name = stactools-usgs-lcmap
version = attr: stactools.usgs_lcmap.__version__
description = USGS Land Change Monitoring, Assesment, and Projection (LCMAP) stactools package 
long_description = file: README.md
long_description_content_type = text/markdown
author = Preston Hartzell
author_email = preston.hartzell@gmail.com
url = https://github.com/stactools-packages/usgs-lcmap
project_urls =
    Issues = https://github.com/stactools-packages/usgs-lcmap/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    lcmap
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.4.0

[options.packages.find]
where = src
